<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_safestrap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SafestrapActivity">

    <RelativeLayout
        android:layout_marginTop="20dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/textLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textInstallStatus_Caption"
                android:text="@string/recovery_state_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textInstallStatus"
                android:text="@string/recovery_state_not_installed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout1"
            android:layout_below="@+id/textLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonInstall"
                android:text="@string/install_recovery"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:textColor="@color/colorButtonText"
                android:background="@drawable/ripple_effect" />

            <Button
                android:id="@+id/buttonUninstall"
                android:text="@string/uninstall_recovery"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:textColor="@color/colorButtonText"
                android:background="@drawable/ripple_effect" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textLayout2"
            android:layout_below="@+id/buttonLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textSystemStatus_Caption"
                android:text="@string/system_status_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textSystemStatus"
                android:text="@string/system_status_not_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout2"
            android:layout_below="@+id/textLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonReboot"
                android:text="@string/reboot_recovery"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:textColor="@color/colorButtonText"
                android:background="@drawable/ripple_effect" />

            <Button
                android:id="@+id/buttonRebootWriteProtect"
                android:text="@string/reboot_write_protect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:textColor="@color/colorButtonText"
                android:background="@drawable/ripple_effect" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textLayout3"
            android:layout_below="@+id/buttonLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView2"
                android:text="@string/version_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView3"
                android:text="@string/version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding" />
        </LinearLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>