<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent" />

<TableLayout 
    android:layout_width="match_parent" 
    android:id="@+id/tableLayout1"
    android:layout_below="@id/android:list"
    android:layout_height="wrap_content">
    <TableRow android:id="@+id/tableRow1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
       		
           <TextView
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/recovery_state_caption"
               android:layout_marginTop="20dip"
               android:id="@+id/textInstallStatus_Caption"
               android:layout_marginLeft="10dip" />
			
           <TextView
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/recovery_state_not_installed"
               android:id="@+id/textInstallStatus"
               android:layout_marginTop="20dip"
               android:paddingLeft="10dip" />
    </TableRow>
</TableLayout>
    
<Button
    android:text="@string/install_recovery"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dip"
    android:id="@+id/buttonInstall"
    android:layout_below="@+id/tableLayout1" />


<Button
    android:text="@string/uninstall_recovery"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/buttonUninstall"
    android:layout_below="@+id/buttonInstall" />

<TableLayout
    android:layout_width="match_parent"
    android:id="@+id/tableLayout2"
    android:layout_height="wrap_content"
    android:layout_below="@+id/buttonUninstall">
    <TableRow
           android:id="@+id/tableRow2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
	   <TextView
               android:layout_width="wrap_content"
               android:id="@+id/textSystemStatus_Caption"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dip"
               android:text="@string/system_status_caption"
               android:layout_marginTop="10dip" />

	   <TextView
               android:text="@string/system_status_not_active"
               android:layout_width="wrap_content"
               android:id="@+id/textSystemStatus"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:layout_height="wrap_content"
               android:paddingLeft="10dip"
               android:layout_marginTop="10dip"
               android:layout_below="@+id/textSystemStatus_Caption" />
    </TableRow>
</TableLayout>

<Button
    android:text="@string/reboot_recovery"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dip"
    android:id="@+id/buttonReboot"
    android:layout_below="@+id/tableLayout2" />


<Button
    android:text="@string/reboot_write_protect"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dip"
    android:id="@+id/buttonRebootWriteProtect"
    android:layout_below="@+id/buttonReboot" />


<TextView 
    android:layout_height="wrap_content"
    android:id="@+id/textView1"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:layout_width="wrap_content"
    android:text="@string/instructions"
    android:layout_margin="10dip"
    android:layout_below="@+id/buttonRebootWriteProtect" />

<TableLayout 
    android:layout_width="match_parent" 
    android:id="@+id/tableLayout3" 
    android:layout_height="wrap_content"
    android:layout_below="@+id/buttonRebootWriteProtect">
    <TableRow android:id="@+id/tableRow3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
       		
           <TextView
               android:textAppearance="?android:attr/textAppearanceMedium"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/version_caption"
               android:layout_marginTop="20dip"
               android:id="@+id/textView2"
               android:layout_marginLeft="10dip" />
		
           <TextView
               android:textAppearance="?android:attr/textAppearanceMedium"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/version"
               android:id="@+id/textView3"
               android:layout_marginTop="20dip"
               android:paddingLeft="10dip" />
    </TableRow>
</TableLayout>

</RelativeLayout>
